deployed gh pages round 2

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-bike-trip-log",
-  "homepage": "http://kjlyon.github.io/epic-bike-travels-react"
+  "homepage": "http://kjlyon.github.io/epic-bike-travels-react",
   "private": true,
   "version": "0.0.0",
   "type": "module",
